<resources>
    <string name="app_name">InstagramViewer</string>
    <string name="followers">Followers</string>
    <string name="_180">180</string>
    <string name="_300">300</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="_240">240</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>

    <!-- Firebase -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authenticate Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_notification">notification</string>

    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="field_followers">followers</string>
    <string name="field_following">following</string>
    <string name="field_longitude">longitude</string>
    <string name="field_latitude">latitude</string>

    <!-- Action -->
    <string name="action_follow">follow</string>
    <string name="action_like">like</string>

    <!-- Dialog names -->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <!-- Photo names -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Intent Extras -->
    <string name="calling_activity">Calling Activity</string>
    <string name="intent_user">intent_user</string>

    <!-- Activity -->
    <string name="profile_activity">Profile Activity</string>
    <string name="main_activity">Main Activity</string>
    <string name="search_activity">Search Activity</string>

    <!-- fragment names -->
    <string name="view_comments_fragment">View Comments</string>

    <!-- Strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="selected_image">selected_image</string>
    <string name="string_share">Share</string>
    <string name="choose_picture">Choose picture</string>
    <string name="crop">Crop</string>
    <string name="sharpen">Sharpen</string>
    <string name="black_white">Black_white</string>
    <string name="documentary">Documentary</string>
    <string name="Brightness">Brightness</string>
    <string name="Contrast">Contrast</string>
    <string name="brightness_contrast">Brightness_contrast</string>
    <string name="picture">take</string>
    <string name="description_info">Info</string>
    <string name="request_permission">Needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="received_image">received_image</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="bluetooth_share">BT share</string>



</resources>
