<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- gallery  toolbar -->
        <include layout="@layout/snippet_top_photoeditorbar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relLayout1"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:orientation="vertical">

            <ja.burhanrashid52.photoeditor.PhotoEditorView
                android:id="@+id/photoEditorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="90" />

            <LinearLayout
                android:id="@+id/seekbars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="10"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/Brightness" />

                    <SeekBar
                        android:id="@+id/brightnessseekbar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="40" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="66dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/Contrast" />

                    <SeekBar
                        android:id="@+id/contrastseekbar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="50" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cropButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crop" />

                <Button
                    android:id="@+id/blackWhiteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black_white" />

                <Button
                    android:id="@+id/sharpenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharpen" />

                <Button
                    android:id="@+id/documentaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documentary" />

                <Button
                    android:id="@+id/bright_contrastButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness_contrast" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</RelativeLayout>